// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`URLPopover matches the snapshot when editing the url 1`] = `
<Popover
  focusOnMount="firstElement"
  noArrow={false}
  onClickOutside={[Function]}
  position="bottom center"
>
  <div
    className="editor-url-popover__row"
  >
    <div>
      Editing
    </div>
    <IconButton
      aria-expanded={false}
      className="editor-url-popover__settings-toggle"
      icon="ellipsis"
      label="Link Settings"
      onClick={[Function]}
    />
  </div>
</Popover>
`;

exports[`URLPopover matches the snapshot when the settings are toggled open 1`] = `
<Popover
  focusOnMount="firstElement"
  noArrow={false}
  onClickOutside={[Function]}
  position="bottom center"
>
  <div
    className="editor-url-popover__row"
  >
    <div>
      Editing
    </div>
    <IconButton
      aria-expanded={true}
      className="editor-url-popover__settings-toggle"
      icon="ellipsis"
      label="Link Settings"
      onClick={[Function]}
    />
  </div>
  <div
    className="editor-url-popover__row editor-url-popover__settings"
  >
    <div>
      Settings
    </div>
  </div>
</Popover>
`;

exports[`URLPopover matches the snapshot when there are no settings 1`] = `
<Popover
  focusOnMount="firstElement"
  noArrow={false}
  onClickOutside={[Function]}
  position="bottom center"
>
  <div
    className="editor-url-popover__row"
  >
    <div>
      Editing
    </div>
  </div>
</Popover>
`;

exports[`URLPopover matches the snapshot when viewing the url 1`] = `
<Popover
  focusOnMount={false}
  noArrow={false}
  onClickOutside={[Function]}
  position="bottom center"
>
  <div
    className="editor-url-popover__row"
  >
    <div>
      Viewing
    </div>
    <IconButton
      aria-expanded={false}
      className="editor-url-popover__settings-toggle"
      icon="ellipsis"
      label="Link Settings"
      onClick={[Function]}
    />
  </div>
</Popover>
`;
